--- a/noise.html
+++ b/noise.html
@@ -2,9 +2,12 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Noise Polution Visualization</h1>
 
-<p>My first paragraph.</p>
-
+<div class="city">Boston</div>
+<div class="city">Chicago</div>
+<div class="city">Atlanta</div>
+<div class="city">Houston</div>
+<div class="city">Anchorage</div>
 </body>
 </html>
