--- a/noise.html
+++ b/noise.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="noise.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+
+</head>
 <body>
 
 <h1>Noise Polution Visualization</h1>
