--- a/noise.html
+++ b/noise.html
@@ -11,10 +11,10 @@
 
 <h1>Noise Polution Visualization</h1>
 
-<div class="city">Boston</div>
-<div class="city">Chicago</div>
-<div class="city">Atlanta</div>
-<div class="city">Houston</div>
-<div class="city">Anchorage</div>
+<a href="cities/boston.html" class="city">Boston</a>
+<button class="city">Chicago</button>
+<button class="city">Atlanta</button>
+<button class="city">Houston</button>
+<button class="city">Anchorage</button>
 </body>
 </html>
